# ez-hash

./: .gitmodules  CMakeLists.txt
cmake/: preconfig.cmake
include/ez/: hash.hpp
include/ez/hash/: djb2.hpp  murmur.hpp  pcg.hpp  splitmix.hpp  state.hpp  util.hpp  xorshift.hpp  xxh.hpp
src/: murmur.cpp  splitmix.cpp  xorshift.cpp  xxhash.cpp
tests/: CMakeLists.txt
tests/hashing/: CMakeLists.txt  main.cpp
tests/utility/: CMakeLists.txt  main.cpp
